--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
 <body>
   <script type="module" src="./main.js"></script>
 </body>
+<audio id="bg-music" src="rihanna_trim.mp3" loop autoplay></audio>
 </html>
