--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <style>body { margin: 0; overflow: hidden; }</style>
 </head>
 <body>
+  <div style="position: absolute; top: 10px; left: 10px; z-index: 1; color: white; font-family: sans-serif;">
+    <label for="timeSlider">Time Speed: <span id="speedDisplay">1.0</span>x</label><br>
+    <input type="range" id="timeSlider" min="0.1" max="10" step="0.1" value="1">
+
+  </div>  
   <script type="module" src="./main.js"></script>
 </body>
-<audio id="bg-music" src="rihanna_trim.mp3" loop autoplay></audio>
+<!--<audio id="bg-music" src="rihanna_trim.mp3" loop autoplay></audio> -->
 </html>
